fix for better touch behavior on mobile

--- a/less/main.less
+++ b/less/main.less
@@ -273,6 +273,8 @@ footer {
 
     width : 2.5rem;
     height : 2.5rem;
+
+    pointer-events : none;
   }
 
   #filter--toggle:checked ~ & {
@@ -497,6 +499,8 @@ footer {
 
         top : 0.5rem;
         left : 0.5rem;
+
+        pointer-events : none;
       }
     }
   }
